Bug 510449 - Regression: Clipboard action menu does not work unless Clipboard Configuration dialog is open
Summary: Regression: Clipboard action menu does not work unless Clipboard Configuratio...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Clipboard widget & pop-up (other bugs)
Version First Reported In: 6.4.5
Platform: Kubuntu Linux
: NOR major
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: regression, wayland-only
: 512089 (view as bug list)
Depends on:
Blocks:
 
Reported: 2025-10-10 10:07 UTC by Mariusz Dykierek
Modified: 2025-11-22 00:52 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.5.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mariusz Dykierek 2025-10-10 10:07:22 UTC
SUMMARY
After a couple, sometimes a few copy text operations the actions stop working. Sometimes they come back, but most of the time they simply do not work.
So I wanted to figure out what I have to change in settings and they miraculously came back. This is how I found out that they work when the Configure dialog of clipboard is open.

This is the third regression that seriously impacts my productivity. I have a lot of IDs that I used to double-click, then chose option from the menu to directly open an appropriate document, page, or directory. This was gone with bug 460698 (https://bugs.kde.org/show_bug.cgi?id=460698). Until now, I had to work it around using regular copy and use action menu. Then a new bright idea came not to invoke when the same text is copied. Well, if I missed the menu I wanted to use it for the second time.
Now the third obstacle is that the Action menu does not show after Ctrl+C or context menu Copy!
The manual invoking (with shortcut) does not work either.
Instead of simplifying and speeding up my work, it becomes a burden.

STEPS TO REPRODUCE
1. Configure an action 
2. Copy text that should invoke Action menu
3. Get frustrated

OBSERVED RESULT
No action menu.

EXPECTED RESULT
My expectation is to have action menu whenever I double click (middle button clipboard) or use regular copy operation.
I expect to have it invoked ALWAYS (the history doesn't have to get filled up with redundant copies though).
I also expect that the shortcuts for manually invoking actions work. 

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Kubuntu 2025.10
KDE Plasma Version: 6.4.5, 6.4.90, 6.4.91 
KDE Frameworks Version: 6.18
Qt Version: 6.9.2

ADDITIONAL INFORMATION
Comment 1 Mariusz Dykierek 2025-10-10 12:27:32 UTC
Correction. The Configure improves the things but the Actions menu does not show up 100% of the time.
Comment 2 Mariusz Dykierek 2025-10-30 11:13:07 UTC
6.5.0 and 6.5.1 also affected.
This really impairs usability of the option badly.
Comment 4 Fushan Wen 2025-11-14 13:50:37 UTC
Git commit b0b4d7a7d507fc045ae05537ab370f40322464db by Fushan Wen.
Committed on 14/11/2025 at 13:33.
Pushed by fusionfuture into branch 'master'.

klipper: fix action menu not always opening when there is matching text

For some reason on Wayland calling QMenu::hide() will block the next
visible request.
FIXED-IN: 6.5.3

M  +0    -4    klipper/urlgrabber.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/b0b4d7a7d507fc045ae05537ab370f40322464db
Comment 5 Fushan Wen 2025-11-14 14:21:37 UTC
Git commit 7975e2c8a84e429a27e0f7cdcb012310f9621a17 by Fushan Wen.
Committed on 14/11/2025 at 13:57.
Pushed by fusionfuture into branch 'Plasma/6.5'.

klipper: fix action menu not always opening when there is matching text

For some reason on Wayland calling QMenu::hide() will block the next
visible request.
FIXED-IN: 6.5.3
(cherry picked from commit b0b4d7a7d507fc045ae05537ab370f40322464db)

M  +0    -4    klipper/urlgrabber.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/7975e2c8a84e429a27e0f7cdcb012310f9621a17
Comment 6 Fushan Wen 2025-11-14 14:40:23 UTC
Actually it's caused by https://invent.kde.org/qt/qt/qtbase/-/commit/2f221dbb376ac0fa1b1198b112cfc439137a0c13 , so another fix is needed.
Comment 7 Bug Janitor Service 2025-11-14 15:30:43 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/6003
Comment 8 Bug Janitor Service 2025-11-16 17:56:51 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/6008
Comment 9 Fushan Wen 2025-11-18 15:07:54 UTC
*** Bug 512089 has been marked as a duplicate of this bug. ***
Comment 10 Mariusz Dykierek 2025-11-20 09:23:28 UTC
Please don't wait until 6.6, please.
Comment 11 Fushan Wen 2025-11-22 00:04:54 UTC
Git commit f92b9464df7c4e07a22c1744b30075389d15f0d9 by Fushan Wen.
Committed on 21/11/2025 at 23:59.
Pushed by fusionfuture into branch 'master'.

klipper: make action menu a normal window

After
https://invent.kde.org/qt/qt/qtbase/-/commit/8c0dd12f4bf7a09304a136c9ceacfb60e0632e50,
a popup menu without a transient parent will be dismissed automatically,
which causes bug 510449. This removes the popup role of the menu to fix
it.
FIXED-IN: 6.5.4

M  +9    -1    klipper/klipper.cpp
M  +10   -1    klipper/urlgrabber.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/f92b9464df7c4e07a22c1744b30075389d15f0d9
Comment 12 Fushan Wen 2025-11-22 00:28:09 UTC
Git commit 46eb126a12b30da4868cd4349cca07c75a246dba by Fushan Wen.
Committed on 22/11/2025 at 00:11.
Pushed by fusionfuture into branch 'master'.

klipper: fix potential memory leak from action menu

m_myMenu is only deleted when the timer reaches timeout, so when
m_myMenu is not null but a new action menu is invoked in
`URLGrabber::actionMenu`, the old QMenu object is leaked.

QAction in the menu also has a wrong lifetime. Its parent should be the
menu instead of URLGrabber, which is always alive when klipper is active.

M  +12   -15   klipper/urlgrabber.cpp
M  +1    -1    klipper/urlgrabber.h

https://invent.kde.org/plasma/plasma-workspace/-/commit/46eb126a12b30da4868cd4349cca07c75a246dba
Comment 13 Fushan Wen 2025-11-22 00:31:55 UTC
Git commit ebc55276b409c46cf39c269c973686a6dccff858 by Fushan Wen.
Committed on 22/11/2025 at 00:07.
Pushed by fusionfuture into branch 'Plasma/6.5'.

klipper: make action menu a normal window

After
https://invent.kde.org/qt/qt/qtbase/-/commit/8c0dd12f4bf7a09304a136c9ceacfb60e0632e50,
a popup menu without a transient parent will be dismissed automatically,
which causes bug 510449. This removes the popup role of the menu to fix
it.
FIXED-IN: 6.5.4
(cherry picked from commit f92b9464df7c4e07a22c1744b30075389d15f0d9)

M  +9    -1    klipper/klipper.cpp
M  +10   -1    klipper/urlgrabber.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/ebc55276b409c46cf39c269c973686a6dccff858
Comment 14 Fushan Wen 2025-11-22 00:52:53 UTC
Git commit b6bb2c456f3e0b0cab9dceca11b782e2b64740d5 by Fushan Wen.
Committed on 22/11/2025 at 00:30.
Pushed by fusionfuture into branch 'Plasma/6.5'.

klipper: fix potential memory leak from action menu

m_myMenu is only deleted when the timer reaches timeout, so when
m_myMenu is not null but a new action menu is invoked in
`URLGrabber::actionMenu`, the old QMenu object is leaked.

QAction in the menu also has a wrong lifetime. Its parent should be the
menu instead of URLGrabber, which is always alive when klipper is active.
(cherry picked from commit 46eb126a12b30da4868cd4349cca07c75a246dba)

M  +12   -15   klipper/urlgrabber.cpp
M  +1    -1    klipper/urlgrabber.h

https://invent.kde.org/plasma/plasma-workspace/-/commit/b6bb2c456f3e0b0cab9dceca11b782e2b64740d5