klipper: fix action menu not always opening when there is matching text

For some reason on Wayland calling QMenu::hide() will block the next
visible request.

BUG: 510449
FIXED-IN: 6.5.3
(cherry picked from commit b0b4d7a7d507fc045ae05537ab370f40322464db)